# faiss

./: CMakeLists.txt
demos/: CMakeLists.txt  demo_generate_gt.cpp  demo_hnsw_laion.cpp  demo_hnsw_msmarco.cpp  demo_hnsw_sift.cpp  demo_hnsw_trip.cpp  demo_kmeans_laion.cpp  demo_kmeans_msmarco.cpp  demo_kmeans_sift.cpp  demo_kmeans_trip.cpp  demo_lsh_trip.cpp  demo_sift1M.cpp
faiss/: Index.cpp  Index2Layer.cpp  IndexBinaryHNSW.cpp  IndexHNSW.cpp  IndexHNSW.h  IndexLSH.cpp  IndexNNDescent.cpp  IndexPreTransform.cpp  index_factory.cpp
faiss/impl/: DistanceComputer.h  HNSW.cpp  HNSW.h  NSG.cpp  index_read.cpp
see/: parse.py  search.py
